# she-calc

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/she_calc/: __init__.py  __main__.py
